<resources>
    <string name="app_name">Marnie</string>
    <string name="action_settings">Settings</string>
    <string name="auth0_client_id">WU0DxEKuQXDpgSJ8lGmLNr1Nux2ejl1P</string>
    <string name="auth0_domain">olek.eu.auth0.com</string>
    <string name="welcome">Welcome To Marnie</string>
    <string name="title">Marnie - train dating</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_success">Login was successful</string>
    <string name="dbLogin">Log In</string>
    <string name="log_out">Log Out</string>
    <string name="to">To</string>
    <string name="from">From</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="trainSearch">Train search</string>
    <string name="myJournyes">My Journeys</string>
    <string name="myDates">My Dates</string>
    <string name="endPoint">http://marnie-001-site1.atempurl.com/api/</string>
    <string name="sharedPref">com.humboshot.marnie.PREFERENCE_FILE_KEY</string>
    <string name="authId">AuthId</string>
    <string name="id">Id</string>
    <string name="personName">Name</string>
    <string name="gender">Gender</string>
    <string name="person">Person</string>
    <string name="departure">Departure:</string>
    <string name="arrivalTime">Arrival:</string>
    <string name="departuresThisDay">Departures this day:</string>
    <string name="titleTrainSearch">Train Search</string>
    <string name="pickRoute">Pick Route</string>
    <string name="pickDate">Pick Date</string>
    <string name="age">Age:</string>
    <string name="auth0Endpoint">https://olek.eu.auth0.com/</string>
    <string name="errorInDate">Date or Time does not fit the formular: yyyy-MM-dd hh:mm:ss</string>
    <string name="hintDate">yyyy-mm-dd</string>
    <string name="hintTime">hh:mm:ss</string>
    <string name="savedate">save date</string>
</resources>
