<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|top"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Activities.MainActivity">

        <RelativeLayout
            android:id="@+id/TextFields"
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="16dp">

            <EditText
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/date"
                android:ems="10"
                android:hint="@string/hintTime"
                android:inputType="time" />

            <EditText
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/to"
                android:ems="10"
                android:hint="@string/hintDate"
                android:inputType="date" />

            <EditText
                android:id="@+id/from"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:ems="10"
                android:hint="@string/from"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/from"
                android:ems="10"
                android:hint="@string/to"
                android:inputType="textPersonName" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/Buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/TextFields"
            tools:layout_editor_absoluteY="0dp"
            tools:layout_editor_absoluteX="8dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <Button
                android:id="@+id/btn_TrainSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:text="@string/trainSearch" />

            <Button
                android:id="@+id/btn_MyJourneys"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_TrainSearch"
                android:text="@string/myJournyes" />

            <Button
                android:id="@+id/btn_MyDates"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_TrainSearch"
                android:layout_toRightOf="@id/btn_MyJourneys"
                android:text="@string/myDates" />

            <Button
                android:id="@+id/log_out"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@android:color/white"
                android:padding="@dimen/activity_general_margin"
                android:textColor="@color/blue_text"
                android:text="@string/log_out"
                android:layout_marginBottom="77dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>

    </RelativeLayout>





